<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_teaching"
        android:icon="@drawable/teaching"
        android:title="@string/title_teaching" />

    <item
        android:id="@+id/navigation_writing"
        android:icon="@drawable/writing"
        android:title="@string/title_writing" />

    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/data"
        android:title="@string/title_data" />

    <item
        android:id="@+id/navigation_tools"
        android:icon="@drawable/tools"
        android:title="@string/title_tools" />

    <item
        android:id="@+id/navigation_others"
        android:icon="@drawable/others"
        android:title="@string/title_others" />

</menu>
